--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Sitio de Prueba de Interlinking</h1>
 		<p>Lorem ipsum dolor sit amet...</p>
+		<h2>El seo a muerto</h2>
 	</body>
 </html>
