Primera prueba de interlinking agregada

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <html>
 	<head>
-		<title>nomadic - Sitio de Prueba de Interlinking</title>
-		<meta name="robots" content="noindex, nofollow">
+		<meta charset="utf-8">
+		<title>Home | Interlink Test</title>
+		<meta name="robots" content="index, follow">
 	</head>
 	<body>
-		<h1>Sitio de Prueba de Interlinking</h1>
-		<p>Lorem ipsum dolor sit amet...</p>
-		<h2>El seo a muerto</h2>
+		<header>
+			<nav>
+				<ul>
+					<li>
+						<a href="pagina-1.html">zgyhdgh4332</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<h1>Lorem ipsum dolor sit amet</h1>
+			<p>Lorem ipsum dolor sit amet <a href="pagina-2.html">zgyhdgh4332</a> adipiscing elit. Suspendisse nisi libero, aliquet sed blandit a, iaculis a sem. Donec nec rutrum enim. Mauris ante enim, condimentum in aliquam ac, tincidunt vel libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Nam viverra non lacus at iaculis. Praesent cursus non mi ut lacinia. Proin sagittis rutrum leo vel vestibulum. Curabitur ligula tellus, euismod non mi in, lobortis auctor nunc. Cras maximus, sapien a eleifend vulputate, leo orci suscipit purus, sed imperdiet lectus tellus sed diam. Sed vitae consectetur eros, vehicula tincidunt nisi. Duis non ex est. Morbi luctus orci lorem, vitae viverra diam euismod et.</p>
+			
+			<p>Vestibulum porta leo ut volutpat aliquam. Phasellus vel elit dui. Nam lacinia turpis vel cursus ultricies. Fusce elementum vehicula nibh eu rhoncus. Integer blandit est in justo gravida placerat. Integer fermentum justo nulla, vel posuere neque posuere sit amet. Integer ac sem enim. Sed nec ultricies risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer est arcu, lobortis eu ultrices ac, rhoncus vel enim. Pellentesque id aliquet ex.</p>
+			
+			<p>Duis at felis efficitur, aliquet nunc et, tristique dolor. Pellentesque eleifend a magna nec iaculis. Vivamus ac diam sed lorem lobortis lacinia vulputate ut ex. Cras gravida ut ipsum in ullamcorper. Fusce tempus dui quam, sed sodales tortor ullamcorper eget. Nunc efficitur et ipsum vel dignissim. Donec consectetur non ex nec laoreet. Ut nec ipsum at turpis lacinia consectetur. Phasellus a elit pharetra, rhoncus dolor sit amet, dictum massa. Sed quis nisl enim. Proin faucibus tortor orci, nec consequat libero ornare sed. Praesent placerat aliquam tincidunt. Curabitur nulla nibh, porta eu odio vitae, viverra laoreet est.</p>
+		</main>
+		<footer>
+			Copyright 2022
+		</footer>
 	</body>
 </html>
