--- a/prueba-3/dia-de-los-muertos.html
+++ b/prueba-3/dia-de-los-muertos.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Prueba Interlinking - Día de los Muertos</title>
 	</head>
 	<body>
